# HorribleUtils

./: .gitmodules  CMakeLists.txt  README.md  pyproject.toml
src/cpp/include/horribleutils/: core.hpp
src/cpp/src/: core.cc
src/horribleutils/: _core.cc
